# RustRayTracer

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  requirements-dev.txt
.github/workflows/: ci.yml  coverage.yml  gallery.yml  report.yml  rust.yml
ci/: .env.template  gen_report.py  imgur_access_token.py  report_configs_commit.yml  report_configs_tag.yml
configs/: render_debug_cornell_box.toml  render_release_cornell_box.toml
configs/cornell_box/: Light_0000_m000.ply  cornell_box_0000_m000.ply  cornell_box_0000_m001.ply  cornell_box_0000_m002.ply  large_box_0000_m000.ply  render_debug.toml  render_high_quality.toml  render_low_quality.toml  render_medium_quality.toml  scene.toml  small_box_0000_m000.ply
configs/smallpt/: render_debug.toml  render_high_quality.toml  render_low_quality.toml  render_medium_quality.toml  scene.toml
src/: camera.rs  common.rs  main.rs  material.rs  math.rs  object.rs  raytracer.rs  renderer.rs  sampler.rs  scene.rs
src/objects/: common.rs  mesh.rs  mod.rs  object.rs  plane.rs  quadrilateral.rs  sphere.rs  triangle.rs  utils.rs
src/shapes/: mesh.rs  mod.rs  plane.rs  quadrilateral.rs  shape.rs  sphere.rs  triangle.rs  utils.rs
src/tracers/: mcpt.rs  mod.rs  tracer.rs  utils.rs
