[package]
name = "rust-ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
image = "0.24"  # for writing images
rand = "0.8"  # for generating random numbers
rayon = "1.8"  # for parallelism
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"  # for parsing config files
clap = { version = "4.4", features = ["derive"] }
log = "0.4"  # for logging
env_logger = "0.9"  # for logging

[dev-dependencies]
approx = "0.5"  # for comparing floats
